# a2web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Dockerfile  LESSONS_LEARNED.md  Makefile  README.md  pyproject.toml  tach.toml
.github/workflows/: release.yml
benchmarks/extraction-quality/: README.md
docs/adr/: 0001-structural-prevention-over-vigilance.md  0002-real-surface-is-ground-truth.md  0003-extraction-seam-coarse-select-llm-interpret.md  0004-typed-extraction-boundary.md  0005-multi-source-extraction-input.md  0006-answerability-and-two-stage-escalation.md  0007-real-surface-grounding-and-reconciliation.md  0008-test-resource-lifecycle-teardown.md  0009-never-silently-miss-a-url.md  0010-reddit-reachability-access-paths.md  0011-reddit-access-strategy.md  0012-shape-and-relay-never-manufacture-a-selection.md  0013-link-affordances-closed-set-handle-digest.md  0014-grounded-urls-only-off-domain-flagged.md  0015-the-withheld-body-index.md  0016-never-metered-api-in-dev-loop.md  0017-effort-and-confidence-proportional-to-evidence.md  INDEX.md
docs/architecture/: README.md  cloudflare-handling.md  extraction-fidelity-program.md
docs/history/: A2KIT_FEEDBACK.md  A2KIT_FEEDBACK_v0.26.md  A2KIT_FEEDBACK_v0.27.md  A2KIT_FEEDBACK_v0.28-32.md  A2KIT_FEEDBACK_v0.32-mcp.md  A2KIT_FEEDBACK_v0.33.md  A2KIT_FEEDBACK_v0.38.md  A2KIT_FEEDBACK_v0.39.md  A2KIT_FEEDBACK_v0.40.md  A2KIT_FEEDBACK_v0.41.md  A2KIT_FEEDBACK_v0.42.md  A2KIT_FEEDBACK_v0.44.md  A2KIT_FEEDBACK_v0.47.md  A2KIT_FEEDBACK_v0.49-envelope-leak.md  A2KIT_FEEDBACK_v0.49.md  A2KIT_WISHES_DEFERRED.md  spike-camoufox-stderr-2026-05-19.md
eval/: __init__.py  _prod_env.py  corpus.yaml  findings_2026-05-22.md  findings_2026-05-23-claude-code-cache-probe.md  findings_2026-05-23-run5.md  findings_2026-05-23.md  findings_2026-05-24-affordances-v1.md  findings_2026-05-24-affordances-v2-v3.md  findings_2026-05-24-affordances-v5-two-axes.md  findings_2026-05-24-claude-code-cli-flag-sweep.md  findings_2026-05-25-router-shape-pre-impl.md  findings_2026-05-25-router-shape-prod-bench.md  findings_2026-05-26-shutdown-thread-leak-spike.md  findings_2026-06-11-a2kit-v043-migration.md  findings_2026-06-27.md  findings_2026-07-08.md  findings_2026-07-09-ask-extraction-token-tuning.md  findings_2026-07-11-also-here-underfires.md  findings_2026-07-11-answer-inline-links.md  findings_2026-07-11-include-links-flip.md
eval/_capture/: README.md  __init__.py  capture.py  cassette.py  corpus.py  refresh.py
eval/model_benchmark/: README.md  corpus.yaml  models.yaml  run.py
eval/spikes/: affordances_v1.py  affordances_v1_output.md  affordances_v2.py  affordances_v2_output.md  affordances_v2_summary.json  affordances_v3_lean.py  affordances_v3_lean_output.md  affordances_v3_lean_summary.json  affordances_v4_calibrate.py  affordances_v4_weak_output.md  affordances_v4_weak_summary.json  affordances_v5_full_output.md  affordances_v5_full_summary.json  affordances_v5_two_axes.py  affordances_v5_weak_output.md  affordances_v5_weak_summary.json  affordances_v6_name_bench.json  affordances_v6_name_bench.py  claude_code_cache_bare.py  claude_code_cache_probe.py  cloudflare_bypass_probe.py  reddit_block_probe.py  reddit_e2e_smoke.py  reddit_with_cookies_probe.py  router_shape_v1.py  router_shape_v1_output.md  router_shape_v1_summary.json  router_shape_v2_stress.py  router_shape_v2_stress_output.md  router_shape_v2_stress_summary.json  surface_eval_v1.py  surface_eval_v1_output.md  surface_eval_v1_summary.json  surface_eval_v2.py  surface_eval_v2_output.md  surface_eval_v2_summary.json
policies/: _helpers.rego  body_dup.rego  data.json  github_actions.rego  name_collision.rego  pyproject.rego
scripts/: extract_facts.py  spike_shutdown_leak.py  spike_typed_funnel_wobble.py
src/a2web/: __init__.py  _plugin.py  cache.py  content_expectations.py  content_guidance.py  cookie_jar.py  decision_log.py  domain.py  fetcher.py  fetcher_response.py  handler_probe.py  link_digest.py  listing_oracle.py  llm_resource.py  log.py  models.py  routers.py  server.py  settings.py  state.py  uptake.py
tests/: conftest.py  test_after_tier_execution.py  test_app_composition.py  test_app_state.py  test_archive_escalation.py  test_archive_tier.py  test_ask_response.py  test_browser_escalation.py  test_browser_pool.py  test_browser_tier.py  test_cache.py  test_contracts.py  test_cookie_jar.py  test_cookie_redaction.py  test_cookie_store_chrome_decrypt.py  test_duration.py  test_events.py  test_extract.py  test_extraction_eval.py  test_fetch_response.py  test_fetcher.py  test_fetcher_ask.py  test_gate.py  test_gate_jina_paywall.py  test_gate_thin_browser.py  test_handlers.py  test_handlers_arxiv.py  test_handlers_github.py  test_handlers_wikipedia.py  test_hn_front_page.py  test_jina_tier.py  test_json_synth_browser_tier.py  test_json_synth_integration.py  test_llm_cache.py  test_llm_claude_code_provider.py  test_llm_eval_suite.py  test_llm_eval_systems.py  test_llm_judge.py  test_llm_module.py  test_log_paths.py  (+18 more)
tests/_helpers/: fake_http.py  log_capture.py
tests/architecture/: test_aiosqlite_daemon.py  test_content_guidance_no_site.py  test_eval_not_imported_by_a2web.py  test_json_entity_array_rendering.py  test_json_entity_render_is_default_keep.py  test_json_loads_funnel.py  test_menu_assembly_is_pure.py  test_no_dict_str_any_on_dataclasses.py  test_no_lambdas_in_app_provide.py  test_no_ldd_terminology.py  test_no_rogue_structlog.py  test_packages_boundary_frozen.py  test_packages_independence.py  test_plugin_modules_only_declare_manifest.py  test_provider_order_single_source.py  test_record_projection_separates_nodes.py  test_response_models_at_module_scope.py  test_terminal_hint_coherence.py  test_tools_return_pydantic_not_str.py
tests/contracts/: ask_debug.json  ask_failure.json  ask_include_content.json  ask_success_minimal.json  ask_success_rich.json  fetch_raw_basic.json  test_contracts.py  tool_schemas.json
tests/eval_replay/: __init__.py  bless.py  harness.py  replay.py  (+5 more)
(+2866 files in other folders)
