[project]
name = "a2web"
version = "0.13.0"
description = "Agent-to-Web — adaptive web fetching MCP server and CLI for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Denis Tomilin"}]
keywords = ["mcp", "mcp-server", "model-context-protocol", "web", "scraping", "fetch", "agent", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = [
    # framework — handles MCP server, CLI, ConnectionStore, formatter, DI, schema, testing
    "a2kit>=0.39,<1",
    # http + extraction
    "curl_cffi>=0.7,<1",
    "httpx>=0.27,<1",
    # cookie decryption (Chrome v10/v11 AES-GCM). Already pulled in
    # transitively by curl_cffi; promoted to direct in v0.8 so the
    # dependency is explicit at the boundary where we use it.
    "cryptography>=43,<46",
    "trafilatura>=1.12,<2",
    "selectolax>=0.3,<1",
    # async + observability
    "anyio>=4,<5",
    "structlog>=24,<25",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    # resilience
    "purgatory>=3,<4",
    # cache
    "aiosqlite>=0.20,<1",
    # config
    "pydantic-settings>=2.5,<3",
    "PyYAML>=6,<7",
    "aiofiles>=25.1.0",
    # v0.7: LLM extraction (was the `[llm]` extra) is now baseline. `--ask`
    # works out of the box; install size jumps ~210MB because claude-agent-sdk
    # bundles the Claude Code binary in `_bundled/`. Most a2web callers run
    # inside Claude Code and rely on the OAuth piggyback — bundling is the
    # right ergonomic call. `[llm]` extra was removed in v0.7 — no alias.
    "anthropic>=0.40,<1",
    "openai>=1.40,<3",
    # markdownify is the Python equivalent of WebFetch's Turndown — used by
    # WebFetchBaseline to keep HTML→markdown behavior close to Claude Code's.
    "markdownify>=0.13,<2",
    # claude-agent-sdk lets a2web piggyback on the user's Claude Code OS
    # session (OAuth subscription or whichever auth `claude` CLI is logged
    # into) — no separate API key required when this is preferred.
    "claude-agent-sdk>=0.1.80,<1",
    # v0.10 (2026-05-19): browser tier moves to baseline. The default escalation
    # chain routes paywalls / anti-bot sites / JS SPAs to camoufox; keeping it
    # optional meant `pip install a2web` produced an uncaught ImportError when
    # the gate decided to escalate. Install size grows ~150MB (camoufox firefox
    # binary + playwright wheels) but the failure mode was worse than the bloat.
    # First-time browser use still requires `python -m camoufox fetch` to pull
    # the Firefox binary — that's a runtime asset, not a Python dep.
    # `playwright` is a transitive dep of camoufox (camoufox is a stealth-patched
    # Firefox driven through Playwright's API) — not pinned here separately.
    "camoufox>=0.4,<1",
]

[project.optional-dependencies]
paid = ["firecrawl-py>=1,<2"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.7,<1",
    "ty>=0.0.1a1",
    "diff-cover>=9,<10",
]

[project.scripts]
a2web = "a2web.server:main"

[tool.uv.sources]
a2kit = { git = "https://github.com/yoselabs/a2kit.git", tag = "v0.39.3" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2web"]

[tool.ruff]
target-version = "py311"
line-length = 140
output-format = "concise"

[tool.ruff.lint]
select = [
    "F",      # pyflakes — undefined names, unused imports
    "S",      # bandit — security
    "T10",    # leftover pdb/breakpoint()
    "T20",    # leftover print()
    "ASYNC",  # blocking-in-async detection (ASYNC100/210/230)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "C4",     # comprehensions
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts + literal test secrets allowed in tests
"src/a2web/llm_eval/__main__.py" = ["T201"]  # CLI entry — print() is the output mechanism
"src/a2web/llm_eval/extraction_cli.py" = ["T201"]  # CLI entry — print() is the output mechanism
"benchmarks/**" = ["T201"]  # ad-hoc benchmark scripts — print() is the output mechanism

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=a2web --cov-report=xml --cov-report=term-missing --cov-fail-under=85"
