[project]
name = "a2web"
version = "0.38.0"
description = "Agent-to-Web — adaptive web fetching MCP server and CLI for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Denis Tomilin"}]
keywords = ["mcp", "mcp-server", "model-context-protocol", "web", "scraping", "fetch", "agent", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = [
    # framework — handles MCP server, CLI, ConnectionStore, formatter, DI, schema, testing.
    # a2web ships code-mode OFF by default (server.py: `config.mcp.code_mode=False`)
    # — the few-tool/lean-payload surface advertises `ask`/`fetch_raw`/`refresh`
    # directly. The `code-mode` extra (pulls `pydantic-monty`) is kept so the
    # sandbox stays *buildable on demand*: the env escape hatch
    # `A2KIT_MCP__CODE_MODE=true` and the `a2web code` subcommand both need it.
    # Drop the extra only if that optionality is deliberately abandoned.
    "a2kit[code-mode]>=0.46,<1",
    # http + extraction
    "curl_cffi>=0.7,<1",
    "httpx>=0.27,<1",
    # cookie decryption (Chrome v10/v11 AES-GCM). Already pulled in
    # transitively by curl_cffi; promoted to direct in v0.8 so the
    # dependency is explicit at the boundary where we use it.
    "cryptography>=43,<46",
    # NOTE: `browser-cookie3` (the local-browser cookie mirror) moved OUT of
    # baseline into the optional `[cookies]` extra below (deployable-container-ci
    # image-slimming). It reads the *local* machine's Chrome/Firefox cookie store,
    # so it is inherently a LOCAL-ONLY feature — useless in a server container
    # (there is no browser there to read from). It also drags `lz4` +
    # `pycryptodome` transitively. Absent → `cookies_refresh` returns a loud
    # "install a2web[cookies]" note; normal fetches read the sqlite mirror and are
    # unaffected. `make install-global` installs it; the container never does.
    "trafilatura>=1.12,<2",
    "selectolax>=0.3,<1",
    # async + observability
    "anyio>=4,<5",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    # resilience
    "purgatory>=3,<4",
    # cache
    "aiosqlite>=0.20,<1",
    # config
    "pydantic-settings>=2.5,<3",
    "PyYAML>=6,<7",
    "aiofiles>=25.1,<26",
    # v0.7: LLM extraction (was the `[llm]` extra) is now baseline. `--ask`
    # works out of the box; install size jumps ~210MB because claude-agent-sdk
    # bundles the Claude Code binary in `_bundled/`. Most a2web callers run
    # inside Claude Code and rely on the OAuth piggyback — bundling is the
    # right ergonomic call. `[llm]` extra was removed in v0.7 — no alias.
    "anthropic>=0.40,<1",
    "openai>=1.40,<3",
    # markdownify is the Python equivalent of WebFetch's Turndown — used by
    # WebFetchBaseline to keep HTML→markdown behavior close to Claude Code's.
    "markdownify>=0.13,<2",
    # NOTE: `claude-agent-sdk` (the Claude Code OS-session piggyback) was moved
    # OUT of baseline to the optional `[claude-code]` extra below
    # (deployable-container-ci): it bundles a ~210MB Claude Code binary that a
    # slim server container has no use for, and the container's default backend
    # is now OpenAI-compatible (DeepSeek). The local `make install-global`
    # piggyback installs `a2web[claude-code]`, so nothing changes for the
    # OS-session workflow. This is a BREAKING packaging change for anyone who
    # relied on `pip install a2web` bringing the SDK.
    # NOTE: the browser rendering engines (`patchright` + `zendriver`) moved OUT
    # of baseline to the optional `[browser]` extra below (deployable-container-ci
    # image-slimming): patchright vendors playwright-core and its baked Chromium +
    # the full desktop system-lib tree dominate image size (~1.35GB of a 2GB
    # image), yet the browser tier is escalation-ONLY (raw/jina/paid/handlers
    # cover the common path). When absent, the browser-backend manifests report
    # `Unavailable` (find_spec gate) and the tier short-circuits to a loud
    # `try_user_browser` hint — never a crash (mirrors the LLM-provider degrade).
    # The slim published container omits it; `make install-global` and
    # `uv sync --all-extras` (dev/CI) install it.
    "gidgethub>=5.4,<6",
]

[project.optional-dependencies]
paid = ["firecrawl-py>=1,<2"]
# Browser rendering engines — the fast Chromium rung (`patchright`, `browser`
# tier) + the robust CDP rung (`zendriver`, `browser_robust` tier). Optional:
# baked Chromium + its desktop system libs are the bulk of image size, and the
# tier is escalation-only. Absent → backends report Unavailable, browser sites
# degrade to a loud `try_user_browser` hint. Bake into a container with
# `--build-arg INSTALL_BROWSER=true`; first browser use needs
# `patchright install chromium` (baked at image build).
browser = ["patchright>=1.60,<2", "zendriver>=0.15,<1"]
# Claude Code OS-session piggyback (OAuth subscription / whichever auth the
# `claude` CLI is logged into — no separate API key). Bundles a ~210MB binary;
# kept out of the slim container. `make install-global` installs this extra so
# the local workflow is unchanged. Absent → the `claude-code` provider reports
# Unavailable and auto-select falls through to anthropic/openai_compatible.
claude-code = ["claude-agent-sdk>=0.1.80,<1"]
# Local-browser cookie mirror (`cookies_refresh`). Reads the local machine's
# Chrome/Firefox cookie store — a LOCAL-ONLY feature, deliberately absent from
# the server container (no browser there). Drags lz4 + pycryptodome. Absent →
# `cookies_refresh` returns a loud "install a2web[cookies]" note.
cookies = ["browser-cookie3>=0.20,<1"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "hypothesis>=6,<7",
    "ruff>=0.7,<1",
    "ty>=0.0.1a1",
    "diff-cover>=9,<10",
    # ADR-0001 Pattern 3 (arch-fitness-functions-bootstrap):
    # Tach for module-boundary contracts ("packages/X is private; only __init__
    # is public"); pytest-archon for AST/call-site invariants Tach can't see
    # (json.loads ban, no-lambdas-in-app.provide, etc.).
    "tach>=0.20,<1",
    "pytest-archon>=0.0.6,<1",
    "pymarkdownlnt>=0.9.37",
    "pre-commit>=4.6.0",
]

[project.scripts]
a2web = "a2web.server:main"
# Container/HTTP serve entrypoint with config-gated Google OAuth (the a2kit
# MCP-auth recipe's programmatic path — a provider object can't be a CLI flag).
# The published image's CMD uses this; `a2web serve` (open) stays for local dev.
a2web-serve = "a2web.server:serve_http_main"

[tool.uv.sources]
a2kit = { git = "https://github.com/yoselabs/a2kit.git", tag = "v0.49.2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2web"]

[tool.ruff]
target-version = "py311"
line-length = 140
output-format = "concise"

[tool.ruff.lint]
select = [
    "F",      # pyflakes — undefined names, unused imports
    "S",      # bandit — security
    "T10",    # leftover pdb/breakpoint()
    "T20",    # leftover print()
    "ASYNC",  # blocking-in-async detection (ASYNC100/210/230)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "C4",     # comprehensions
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts + literal test secrets allowed in tests
"src/a2web/llm_eval/__main__.py" = ["T201"]  # CLI entry — print() is the output mechanism
"src/a2web/llm_eval/extraction_cli.py" = ["T201"]  # CLI entry — print() is the output mechanism
"src/a2web/llm_eval/browser_bakeoff.py" = ["T201"]  # CLI entry — print() is the output mechanism
"benchmarks/**" = ["T201"]  # ad-hoc benchmark scripts — print() is the output mechanism

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Real-browser smoke checks launch the actual Camoufox binary — slow, and a
# release-gate concern, not an inner-loop one. They are excluded from the
# default run here; `make test-browser` re-includes them via `-m browser`
# (a later command-line `-m` overrides this addopts default).
addopts = ["-m", "not browser"]
markers = [
    "browser: real-browser test that launches Camoufox (opt-in; excluded from the default run and `make check`)",
]
# NB (ADR-0008): `filterwarnings = ["error::pytest.PytestUnhandledThreadExceptionWarning"]`
# was tried as a leak backstop and REMOVED — it promotes a rare, benign aiosqlite
# teardown-race warning into a hard ~1/15 failure, re-introducing flakiness. The
# deterministic leak detector is the `_sqlite_lifecycle` fixture's open-state
# assertion in conftest (a fact, not the racy symptom); that is the fitness
# function, and it carries no flakiness.
# Coverage is NOT in addopts — it ~doubles wall time and is a release-gate
# concern, not an inner-loop one. `make test` runs bare (fast); `make check`
# runs `make test-cov` with the coverage flags and the 85% gate.
